--- a/app.json
+++ b/app.json
@@ -18,12 +18,24 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "permissions": [
+          "WAKE_LOCK"
+        ]
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.cr7cr8.learneng"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9c11f8aa-c153-480c-bc04-d1f72fef5f97"
+      }
+    },
+    "plugins": [
+      "expo-background-task"
+    ]
   }
 }
