--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^7.4.2",
-    "expo": "~53.0.17",
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0",
+    "expo": "^53.0.22",
     "expo-asset": "^11.1.7",
     "expo-audio": "~0.4.8",
     "expo-av": "^15.1.7",
     "expo-device": "~7.1.4",
     "expo-document-picker": "^13.1.6",
     "expo-file-system": "^18.1.11",
+    "expo-font": "^14.0.8",
     "expo-keep-awake": "^14.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-media-library": "^17.1.7",
     "expo-speech": "^13.1.7",
     "expo-status-bar": "~2.2.3",
@@ -29,6 +34,7 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-draggable-flatlist": "^4.0.3",
+    "react-native-draglist": "^3.9.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-reanimated": "^3.17.4",
@@ -38,7 +44,9 @@
     "react-native-swipeable-item": "^2.0.9",
     "recyclerlistview": "^4.2.3",
     "superagent": "^10.2.1",
-    "use-debounce": "^10.0.5"
+    "use-debounce": "^10.0.5",
+    "expo-task-manager": "~13.1.6",
+    "expo-background-task": "~0.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
